--- a/index.html
+++ b/index.html
@@ -12,32 +12,37 @@
 </head>
 
 <body>
-    <div class="container">
-        <img src="foto-profil.jpeg" alt="profile" class="foto-profil">
-        <h2 class="judul">@kikifaqih_</h2>
-        <h3 class="email">my email : khikyfaqih@gmail.com </h3>
-        <div class="ucapan">
-            <p>Selamat Datang Di Kediaman Online Kecil ku :)
-            </p>
+    <main>
+        <div class="container">
+            <img src="foto-profil.jpeg" alt="profile" class="foto-profil">
+            <h2 class="judul">@kikifaqih_</h2>
+            <h3 class="email">my email : khikyfaqih@gmail.com </h3>
+            <div class="ucapan">
+                <p>Selamat Datang Di Kediaman Online Kecil ku :)
+                </p>
+            </div>
+            <h3 class="text">My Social Media :</h3>
+            <div id="instagram">
+                instagram
+            </div>
+            <div id="tiktok">
+                tiktok
+            </div>
+            <div id="youtube">
+                youtube
+            </div>
+            <div id="spotify">
+                spotify
+            </div>
         </div>
-        <h3 class="text">My Social Media :</h3>
-        <div id="instagram">
-            instagram
-        </div>
-        <div id="tiktok">
-            tiktok
-        </div>
-        <div id="youtube">
-            youtube
-        </div>
-        <div id="spotify">
-            spotify
-        </div>
-    </div>
-    <script src="script.js">
+        <script src="script.js">
 
-    </script>
-
+        </script>
+    </main>
+    <footer>
+        <h3>ini footer
+        </h3>
+    </footer>
 </body>
 
 </html>
