--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <header>
+        <h2>ini header</h2>
+    </header>
     <main>
         <div class="container">
             <img src="foto-profil.jpeg" alt="profile" class="foto-profil">
